--- a/importcontacts/src/main/res/layout/import_contacts.xml
+++ b/importcontacts/src/main/res/layout/import_contacts.xml
@@ -6,7 +6,7 @@
              android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/import_contacts_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
