--- a/playerlist/src/main/res/layout/player_list_item.xml
+++ b/playerlist/src/main/res/layout/player_list_item.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/player_name"
+        android:id="@+id/player_list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
