--- a/match/src/main/res/layout/match_details.xml
+++ b/match/src/main/res/layout/match_details.xml
@@ -43,7 +43,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_access_time_black_24dp"
-        android:tint="@color/colorPrimary"
+        app:tint="@color/colorPrimary"
         app:layout_constraintEnd_toStartOf="@+id/vertical_two"
         app:layout_constraintStart_toStartOf="@+id/vertical_one"
         app:layout_constraintTop_toBottomOf="@id/match_date_time_location_toolbar" />
@@ -129,7 +129,7 @@
         android:layout_marginBottom="8dp"
         android:contentDescription="location icon"
         android:src="@drawable/ic_location_on_black_24dp"
-        android:tint="@color/colorPrimary"
+        app:tint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="@id/vertical_two"
         app:layout_constraintStart_toStartOf="@+id/vertical_one"
         app:layout_constraintTop_toTopOf="@+id/horizontal_divider_one" />
@@ -179,7 +179,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/ic_people_black_24dp"
-        android:tint="@color/colorPrimary"
+        app:tint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="@id/vertical_two"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/vertical_one"
