--- a/match/src/main/res/layout/match_squad_layout.xml
+++ b/match/src/main/res/layout/match_squad_layout.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_message_black_24dp"
-        android:tint="@color/grey_600"
+        app:tint="@color/grey_600"
         app:layout_constraintBottom_toTopOf="@id/match_squad_player_list"
         app:layout_constraintEnd_toStartOf="@+id/match_squad_declined_icon"
         app:layout_constraintStart_toStartOf="parent"
