--- a/playerlist/src/main/res/values/dimens.xml
+++ b/playerlist/src/main/res/values/dimens.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="player_list_avatar_size">48dp</dimen>
+    <dimen name="player_avatar_main_circle_margin">1dp</dimen>
+    <dimen name="player_avatar_shadow_padding">0.5dp</dimen>
+    <dimen name="player_avatar_head_y_offset">4dp</dimen>
+    <dimen name="player_avatar_head_radius_offset">1dp</dimen>
+    <dimen name="player_avatar_body_oval_radius">8dp</dimen>
+    <dimen name="player_avatar_body_margin">5dp</dimen>
+    <dimen name="player_avatar_neck_margin">3dp</dimen>
+    <dimen name="player_avatar_body_cutoff_stroke_width">1dp</dimen>
+    <dimen name="player_avatar_and_name_text_size">12sp</dimen>
+    <dimen name="player_avatar_and_name_icon_size">24sp</dimen>
 </resources>
